Avoid float left to overlap on mobile

--- a/_sass/pages/page.sass
+++ b/_sass/pages/page.sass
@@ -15,6 +15,8 @@
         > .right
             display: inline-block
             float: right
+            @media (max-width : 500px)
+                float: none
             > .social-links
                 margin: 0
 
@@ -27,6 +29,8 @@
         .date
             color: $gama
             float: right
+            @media (max-width : 500px)
+                float: none
         h1, h2, h3
             margin: 0
         h3
